--- a/package.json
+++ b/package.json
@@ -9,21 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/core": "^0.7.1",
+    "@libsql/client": "^0.1.3",
     "@types/node": "18.16.1",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
     "autoprefixer": "10.4.14",
+    "cookie": "^0.5.0",
+    "drizzle-orm": "^0.25.3",
+    "drizzle-zod": "^0.4.1",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
     "next": "13.3.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "set-cookie-parser": "^2.6.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@types/cookie": "^0.5.1",
+    "@types/set-cookie-parser": "^2.4.2",
+    "drizzle-kit": "^0.17.6",
     "eslint-config-prettier": "^8.8.0",
+    "next-auth": "^4.22.1",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.2.7"
   }
