--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,29 @@
 {
+    "plugins": [
+        "@typescript-eslint"
+    ],
     "extends": [
         "next/core-web-vitals",
-        "prettier"
-    ]
+        "prettier",
+        "plugin:@typescript-eslint/recommended"
+    ],
+    "rules": {
+        "@typescript-eslint/consistent-type-imports": [
+            "warn",
+            {
+                "prefer": "type-imports",
+                "fixStyle": "inline-type-imports"
+            }
+        ],
+        "@typescript-eslint/no-unused-vars": [
+            "warn",
+            {
+                "vars": "all",
+                "args": "after-used",
+                "ignoreRestSiblings": false,
+                "argsIgnorePattern": "^_",
+                "varsIgnorePattern": "^_"
+            }
+        ]
+    }
 }
