--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "devDependencies": {
     "@types/cookie": "^0.5.1",
     "@types/set-cookie-parser": "^2.4.2",
+    "@typescript-eslint/eslint-plugin": "^5.59.1",
     "drizzle-kit": "^0.17.6",
     "eslint-config-prettier": "^8.8.0",
     "next-auth": "^4.22.1",
