--- a/package.json
+++ b/package.json
@@ -1,49 +1,51 @@
 {
-  "name": "zanudas-edge-experimental",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@auth/core": "^0.7.1",
-    "@libsql/client": "^0.1.3",
-    "@tanstack/query-core": "^4.29.5",
-    "@tanstack/react-query": "^4.29.5",
-    "@trpc/client": "^10.23.0",
-    "@trpc/react-query": "^10.23.0",
-    "@trpc/server": "^10.23.0",
-    "@types/node": "18.16.1",
-    "@types/react": "18.2.0",
-    "@types/react-dom": "18.2.1",
-    "autoprefixer": "10.4.14",
-    "clsx": "^1.2.1",
-    "cookie": "^0.5.0",
-    "drizzle-orm": "^0.25.3",
-    "drizzle-zod": "^0.4.1",
-    "eslint": "8.39.0",
-    "eslint-config-next": "13.3.1",
-    "next": "^13.3.2",
-    "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "set-cookie-parser": "^2.6.0",
-    "superjson": "^1.12.3",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.0.4",
-    "zod": "^3.21.4"
-  },
-  "devDependencies": {
-    "@types/cookie": "^0.5.1",
-    "@types/set-cookie-parser": "^2.4.2",
-    "@typescript-eslint/eslint-plugin": "^5.59.1",
-    "drizzle-kit": "^0.17.6",
-    "eslint-config-prettier": "^8.8.0",
-    "next-auth": "^4.22.1",
-    "prettier": "^2.8.8",
-    "prettier-plugin-tailwindcss": "^0.2.7"
-  }
+    "name": "zanudas-edge-experimental",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "postinstall": "patch-package"
+    },
+    "dependencies": {
+        "@auth/core": "^0.7.1",
+        "@libsql/client": "^0.1.3",
+        "@tanstack/query-core": "^4.29.5",
+        "@tanstack/react-query": "^4.29.5",
+        "@trpc/client": "^10.23.0",
+        "@trpc/react-query": "^10.23.0",
+        "@trpc/server": "^10.23.0",
+        "@types/node": "18.16.1",
+        "@types/react": "18.2.0",
+        "@types/react-dom": "18.2.1",
+        "autoprefixer": "10.4.14",
+        "clsx": "^1.2.1",
+        "cookie": "^0.5.0",
+        "drizzle-orm": "^0.25.3",
+        "drizzle-zod": "^0.4.1",
+        "eslint": "8.39.0",
+        "eslint-config-next": "13.3.1",
+        "next": "^13.3.2",
+        "postcss": "8.4.23",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "set-cookie-parser": "^2.6.0",
+        "superjson": "^1.12.3",
+        "tailwindcss": "3.3.2",
+        "typescript": "5.0.4",
+        "zod": "^3.21.4"
+    },
+    "devDependencies": {
+        "@types/cookie": "^0.5.1",
+        "@types/set-cookie-parser": "^2.4.2",
+        "@typescript-eslint/eslint-plugin": "^5.59.1",
+        "drizzle-kit": "^0.17.6",
+        "eslint-config-prettier": "^8.8.0",
+        "next-auth": "^4.22.1",
+        "patch-package": "^7.0.0",
+        "prettier": "^2.8.8",
+        "prettier-plugin-tailwindcss": "^0.2.7"
+    }
 }
