--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     },
     "dependencies": {
         "@auth/core": "^0.7.1",
-        "@libsql/client": "^0.1.3",
+        "@libsql/client": "^0.1.4",
         "@tanstack/query-core": "^4.29.5",
         "@tanstack/react-query": "^4.29.5",
         "@trpc/client": "^10.23.0",
         "@trpc/react-query": "^10.23.0",
         "@trpc/server": "^10.23.0",
-        "@types/node": "18.16.1",
+        "@types/node": "18.16.3",
         "@types/react": "18.2.0",
         "@types/react-dom": "18.2.1",
         "autoprefixer": "10.4.14",
@@ -26,8 +26,8 @@
         "drizzle-orm": "^0.25.3",
         "drizzle-zod": "^0.4.1",
         "eslint": "8.39.0",
-        "eslint-config-next": "13.3.1",
-        "next": "^13.3.2",
+        "eslint-config-next": "^13.3.4",
+        "next": "^13.3.4",
         "postcss": "8.4.23",
         "react": "18.2.0",
         "react-dom": "18.2.0",
@@ -46,6 +46,6 @@
         "next-auth": "^4.22.1",
         "patch-package": "^7.0.0",
         "prettier": "^2.8.8",
-        "prettier-plugin-tailwindcss": "^0.2.7"
+        "prettier-plugin-tailwindcss": "^0.2.8"
     }
 }
