--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
         "postcss": "8.4.23",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "react-dropzone": "^14.2.3",
+        "react-hot-toast": "^2.4.1",
         "set-cookie-parser": "^2.6.0",
         "superjson": "^1.12.3",
         "tailwindcss": "3.3.2",
