--- a/package.json
+++ b/package.json
@@ -14,20 +14,20 @@
         "@libsql/client": "^0.1.4",
         "@tanstack/query-core": "^4.29.5",
         "@tanstack/react-query": "^4.29.5",
-        "@trpc/client": "^10.23.0",
-        "@trpc/react-query": "^10.23.0",
-        "@trpc/server": "^10.23.0",
+        "@trpc/client": "^10.25.0",
+        "@trpc/react-query": "^10.25.0",
+        "@trpc/server": "^10.25.0",
         "@types/node": "18.16.3",
-        "@types/react": "18.2.0",
-        "@types/react-dom": "18.2.1",
+        "@types/react": "^18.2.5",
+        "@types/react-dom": "^18.2.3",
         "autoprefixer": "10.4.14",
         "clsx": "^1.2.1",
         "cookie": "^0.5.0",
-        "drizzle-orm": "^0.25.3",
+        "drizzle-orm": "^0.25.4",
         "drizzle-zod": "^0.4.1",
         "eslint": "8.39.0",
-        "eslint-config-next": "^13.3.4",
-        "next": "^13.3.4",
+        "eslint-config-next": "^13.4.0",
+        "next": "^13.4.0",
         "postcss": "8.4.23",
         "react": "18.2.0",
         "react-dom": "18.2.0",
@@ -42,7 +42,7 @@
     "devDependencies": {
         "@types/cookie": "^0.5.1",
         "@types/set-cookie-parser": "^2.4.2",
-        "@typescript-eslint/eslint-plugin": "^5.59.1",
+        "@typescript-eslint/eslint-plugin": "^5.59.2",
         "drizzle-kit": "^0.17.6",
         "eslint-config-prettier": "^8.8.0",
         "next-auth": "^4.22.1",
