--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "react-dropzone": "^14.2.3",
         "react-hot-toast": "^2.4.1",
         "set-cookie-parser": "^2.6.0",
+        "socket.io-client": "^4.6.1",
         "superjson": "^1.12.3",
         "tailwindcss": "3.3.2",
         "typescript": "5.0.4",
