--- a/package.json
+++ b/package.json
@@ -11,23 +11,24 @@
     },
     "dependencies": {
         "@auth/core": "^0.7.1",
-        "@libsql/client": "^0.1.4",
+        "@libsql/client": "^0.1.6",
         "@tanstack/query-core": "^4.29.5",
         "@tanstack/react-query": "^4.29.5",
-        "@trpc/client": "^10.25.0",
-        "@trpc/react-query": "^10.25.0",
-        "@trpc/server": "^10.25.0",
-        "@types/node": "20.1.0",
+        "@trpc/client": "^10.26.0",
+        "@trpc/react-query": "^10.26.0",
+        "@trpc/server": "^10.26.0",
+        "@types/node": "20.1.3",
         "@types/react": "^18.2.6",
         "@types/react-dom": "^18.2.4",
         "autoprefixer": "10.4.14",
         "clsx": "^1.2.1",
         "cookie": "^0.5.0",
+        "crypto-js": "^4.1.1",
         "drizzle-orm": "^0.25.4",
         "drizzle-zod": "^0.4.1",
         "eslint": "8.40.0",
-        "eslint-config-next": "^13.4.1",
-        "next": "^13.4.1",
+        "eslint-config-next": "^13.4.2",
+        "next": "^13.4.2",
         "postcss": "8.4.23",
         "react": "18.2.0",
         "react-dom": "18.2.0",
@@ -42,8 +43,9 @@
     },
     "devDependencies": {
         "@types/cookie": "^0.5.1",
+        "@types/crypto-js": "^4.1.1",
         "@types/set-cookie-parser": "^2.4.2",
-        "@typescript-eslint/eslint-plugin": "^5.59.2",
+        "@typescript-eslint/eslint-plugin": "^5.59.5",
         "drizzle-kit": "^0.17.6",
         "eslint-config-prettier": "^8.8.0",
         "next-auth": "^4.22.1",
