--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "build": "next build",
         "start": "next start",
         "lint": "next lint",
-        "postinstall": "patch-package"
+        "postinstall": "patch-package",
+        "db:migrate": "drizzle-kit generate:sqlite"
     },
     "dependencies": {
         "@auth/core": "^0.7.1",
