--- a/package.json
+++ b/package.json
@@ -15,23 +15,23 @@
         "@dnd-kit/core": "^6.0.8",
         "@dnd-kit/sortable": "^7.0.2",
         "@libsql/client": "^0.1.6",
-        "@tanstack/query-core": "^4.29.5",
-        "@tanstack/react-query": "^4.29.5",
-        "@trpc/client": "^10.26.0",
-        "@trpc/react-query": "^10.26.0",
-        "@trpc/server": "^10.26.0",
-        "@types/node": "20.1.3",
+        "@tanstack/query-core": "^4.29.7",
+        "@tanstack/react-query": "^4.29.7",
+        "@trpc/client": "^10.27.1",
+        "@trpc/react-query": "^10.27.1",
+        "@trpc/server": "^10.27.1",
+        "@types/node": "^20.2.1",
         "@types/react": "^18.2.6",
         "@types/react-dom": "^18.2.4",
         "autoprefixer": "10.4.14",
         "clsx": "^1.2.1",
         "cookie": "^0.5.0",
         "crypto-js": "^4.1.1",
-        "drizzle-orm": "^0.25.4",
+        "drizzle-orm": "^0.26.0",
         "drizzle-zod": "^0.4.1",
-        "eslint": "8.40.0",
-        "eslint-config-next": "^13.4.2",
-        "next": "^13.4.2",
+        "eslint": "8.41.0",
+        "eslint-config-next": "^13.4.3",
+        "next": "^13.4.3",
         "postcss": "8.4.23",
         "react": "18.2.0",
         "react-dom": "18.2.0",
@@ -48,12 +48,12 @@
         "@types/cookie": "^0.5.1",
         "@types/crypto-js": "^4.1.1",
         "@types/set-cookie-parser": "^2.4.2",
-        "@typescript-eslint/eslint-plugin": "^5.59.5",
-        "drizzle-kit": "^0.17.6",
+        "@typescript-eslint/eslint-plugin": "^5.59.6",
+        "drizzle-kit": "^0.18.0",
         "eslint-config-prettier": "^8.8.0",
         "next-auth": "^4.22.1",
         "patch-package": "^7.0.0",
         "prettier": "^2.8.8",
-        "prettier-plugin-tailwindcss": "^0.2.8"
+        "prettier-plugin-tailwindcss": "^0.3.0"
     }
 }
