--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,7 @@ NEXTAUTH_URL="http://localhost:5000"
 TWITCH_CLIENT_ID=""
 TWITCH_CLIENT_SECRET=""
 
+# Socket variables
+NEXT_PUBLIC_SOCKET_ADDRESS="https://localhost:5300"
+SOCKET_KEY=""
+SOCKET_SECRET=""
