--- a/package.json
+++ b/package.json
@@ -11,44 +11,45 @@
         "db:migrate": "drizzle-kit generate:sqlite"
     },
     "dependencies": {
-        "@auth/core": "^0.7.1",
+        "@auth/core": "^0.8.2",
         "@dnd-kit/core": "^6.0.8",
         "@dnd-kit/sortable": "^7.0.2",
-        "@libsql/client": "^0.1.6",
+        "@libsql/client": "^0.2.1",
         "@tanstack/query-core": "^4.29.11",
-        "@tanstack/react-query": "^4.29.12",
-        "@trpc/client": "^10.28.1",
-        "@trpc/react-query": "^10.28.1",
-        "@trpc/server": "^10.28.1",
-        "@types/node": "^20.2.5",
-        "@types/react": "^18.2.7",
-        "@types/react-dom": "^18.2.4",
+        "@tanstack/react-query": "^4.29.13",
+        "@trpc/client": "^10.30.0",
+        "@trpc/react-query": "^10.30.0",
+        "@trpc/server": "^10.30.0",
+        "@types/node": "^20.3.1",
+        "@types/react": "^18.2.12",
+        "@types/react-dom": "^18.2.5",
         "autoprefixer": "10.4.14",
         "clsx": "^1.2.1",
         "cookie": "^0.5.0",
         "crypto-js": "^4.1.1",
-        "drizzle-orm": "^0.26.3",
-        "drizzle-zod": "^0.4.2",
-        "eslint": "8.41.0",
-        "eslint-config-next": "^13.4.4",
-        "next": "^13.4.4",
+        "drizzle-orm": "^0.26.5",
+        "drizzle-zod": "^0.4.3",
+        "eslint": "8.42.0",
+        "eslint-config-next": "^13.4.5",
+        "next": "^13.4.5",
         "postcss": "8.4.24",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-dropzone": "^14.2.3",
         "react-hot-toast": "^2.4.1",
         "set-cookie-parser": "^2.6.0",
+        "sharp": "^0.32.1",
         "socket.io-client": "^4.6.2",
         "superjson": "^1.12.3",
         "tailwindcss": "3.3.2",
-        "typescript": "5.0.4",
+        "typescript": "5.1.3",
         "zod": "^3.21.4"
     },
     "devDependencies": {
         "@types/cookie": "^0.5.1",
         "@types/crypto-js": "^4.1.1",
         "@types/set-cookie-parser": "^2.4.2",
-        "@typescript-eslint/eslint-plugin": "^5.59.8",
+        "@typescript-eslint/eslint-plugin": "^5.59.11",
         "drizzle-kit": "^0.18.1",
         "eslint-config-prettier": "^8.8.0",
         "next-auth": "^4.22.1",
