--- a/package.json
+++ b/package.json
@@ -15,23 +15,23 @@
         "@dnd-kit/core": "^6.0.8",
         "@dnd-kit/sortable": "^7.0.2",
         "@libsql/client": "^0.2.1",
-        "@tanstack/query-core": "^4.29.11",
-        "@tanstack/react-query": "^4.29.13",
-        "@trpc/client": "^10.30.0",
-        "@trpc/react-query": "^10.30.0",
-        "@trpc/server": "^10.30.0",
+        "@tanstack/query-core": "^4.29.14",
+        "@tanstack/react-query": "^4.29.14",
+        "@trpc/client": "^10.31.0",
+        "@trpc/react-query": "^10.31.0",
+        "@trpc/server": "^10.31.0",
         "@types/node": "^20.3.1",
-        "@types/react": "^18.2.12",
-        "@types/react-dom": "^18.2.5",
+        "@types/react": "^18.2.13",
+        "@types/react-dom": "^18.2.6",
         "autoprefixer": "10.4.14",
         "clsx": "^1.2.1",
         "cookie": "^0.5.0",
         "crypto-js": "^4.1.1",
-        "drizzle-orm": "^0.26.5",
-        "drizzle-zod": "^0.4.3",
-        "eslint": "8.42.0",
-        "eslint-config-next": "^13.4.5",
-        "next": "^13.4.5",
+        "drizzle-orm": "^0.27.0",
+        "drizzle-zod": "^0.4.4",
+        "eslint": "^8.43.0",
+        "eslint-config-next": "^13.4.6",
+        "next": "^13.4.6",
         "postcss": "8.4.24",
         "react": "18.2.0",
         "react-dom": "18.2.0",
@@ -50,7 +50,7 @@
         "@types/crypto-js": "^4.1.1",
         "@types/set-cookie-parser": "^2.4.2",
         "@typescript-eslint/eslint-plugin": "^5.59.11",
-        "drizzle-kit": "^0.18.1",
+        "drizzle-kit": "^0.19.1",
         "eslint-config-prettier": "^8.8.0",
         "next-auth": "^4.22.1",
         "patch-package": "^7.0.0",
