--- a/package.json
+++ b/package.json
@@ -11,50 +11,50 @@
         "db:migrate": "drizzle-kit generate:sqlite"
     },
     "dependencies": {
-        "@auth/core": "^0.9.0",
+        "@auth/core": "^0.10.0",
         "@dnd-kit/core": "^6.0.8",
         "@dnd-kit/sortable": "^7.0.2",
-        "@libsql/client": "^0.3.0",
-        "@tanstack/query-core": "^4.29.19",
-        "@tanstack/react-query": "^4.29.19",
-        "@trpc/client": "^10.34.0",
-        "@trpc/react-query": "^10.34.0",
-        "@trpc/server": "^10.34.0",
-        "@types/node": "^20.4.1",
-        "@types/react": "^18.2.14",
-        "@types/react-dom": "^18.2.6",
+        "@libsql/client": "^0.3.1",
+        "@tanstack/query-core": "^4.32.0",
+        "@tanstack/react-query": "^4.32.0",
+        "@trpc/client": "^10.35.0",
+        "@trpc/react-query": "^10.35.0",
+        "@trpc/server": "^10.35.0",
+        "@types/node": "^20.4.2",
+        "@types/react": "^18.2.15",
+        "@types/react-dom": "^18.2.7",
         "autoprefixer": "10.4.14",
-        "clsx": "^1.2.1",
+        "clsx": "^2.0.0",
         "cookie": "^0.5.0",
         "crypto-js": "^4.1.1",
-        "drizzle-orm": "^0.27.0",
+        "drizzle-orm": "^0.27.2",
         "drizzle-zod": "^0.4.4",
-        "eslint": "^8.44.0",
-        "eslint-config-next": "^13.4.9",
-        "next": "^13.4.9",
-        "postcss": "8.4.25",
+        "eslint": "^8.45.0",
+        "eslint-config-next": "^13.4.11",
+        "next": "^13.4.11",
+        "postcss": "8.4.26",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-dropzone": "^14.2.3",
         "react-hot-toast": "^2.4.1",
         "set-cookie-parser": "^2.6.0",
-        "sharp": "^0.32.1",
+        "sharp": "^0.32.3",
         "socket.io-client": "^4.7.1",
-        "superjson": "^1.12.4",
-        "tailwindcss": "3.3.2",
+        "superjson": "^1.13.1",
+        "tailwindcss": "3.3.3",
         "typescript": "5.1.6",
         "zod": "^3.21.4"
     },
     "devDependencies": {
         "@types/cookie": "^0.5.1",
         "@types/crypto-js": "^4.1.1",
-        "@types/set-cookie-parser": "^2.4.2",
-        "@typescript-eslint/eslint-plugin": "^5.61.0",
-        "drizzle-kit": "^0.19.3",
+        "@types/set-cookie-parser": "^2.4.3",
+        "@typescript-eslint/eslint-plugin": "5.61.0",
+        "drizzle-kit": "^0.19.10",
         "eslint-config-prettier": "^8.8.0",
-        "next-auth": "^4.22.1",
-        "patch-package": "^7.0.0",
+        "next-auth": "^4.22.3",
+        "patch-package": "^7.0.2",
         "prettier": "^3.0.0",
-        "prettier-plugin-tailwindcss": "^0.3.0"
+        "prettier-plugin-tailwindcss": "^0.4.1"
     }
 }
